--- a/Signal/translations/uk.lproj/PluralAware.stringsdict
+++ b/Signal/translations/uk.lproj/PluralAware.stringsdict
@@ -408,13 +408,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Групи у Signal найкраще працюють з %1$d учасником або менше. Якщо додати більше учасників, повідомлення відправлятимуться й отримуватимуться довше.</string>
+			<string>Групи в Signal найкраще працюють, коли в них %1$d учасник. Якщо додати більше учасників, надсилання й отримання повідомлень займатиме більше часу.</string>
 			<key>few</key>
-			<string>Групи у Signal найкраще працюють з %1$d учасниками або менше. Якщо додати більше учасників, повідомлення відправлятимуться й отримуватимуться довше.</string>
+			<string>Групи в Signal найкраще працюють, коли в них не більш ніж %1$d учасники. Якщо додати більше учасників, надсилання й отримання повідомлень займатиме більше часу.</string>
 			<key>many</key>
-			<string>Групи у Signal найкраще працюють з %1$d учасниками або менше. Якщо додати більше учасників, повідомлення відправлятимуться й отримуватимуться довше.</string>
+			<string>Групи в Signal найкраще працюють, коли в них не більш ніж %1$d учасників. Якщо додати більше учасників, надсилання й отримання повідомлень займатиме більше часу.</string>
 			<key>other</key>
-			<string>Групи у Signal найкраще працюють з %1$d учасника або менше. Якщо додати більше учасників, повідомлення відправлятимуться й отримуватимуться довше.</string>
+			<string>Групи в Signal найкраще працюють, коли в них не більш ніж %1$d учасника. Якщо додати більше учасників, надсилання й отримання повідомлень займатиме більше часу.</string>
 		</dict>
 	</dict>
 	<key>GROUP_CALL_HAS_MAX_DEVICES_%d</key>
@@ -610,11 +610,11 @@
 			<key>one</key>
 			<string>%1$d учасник групи має таке саме ім&apos;я.</string>
 			<key>few</key>
-			<string>%1$d учасники групи мають таке саме ім&apos;я.</string>
+			<string>%1$d учасники групи мають однакові імена.</string>
 			<key>many</key>
-			<string>%1$d учасників групи мають таке саме ім&apos;я.</string>
+			<string>%1$d учасників групи мають однакові імена.</string>
 			<key>other</key>
-			<string>%1$d учасника групи мають таке саме ім&apos;я.</string>
+			<string>%1$d учасника групи мають однакові імена.</string>
 		</dict>
 	</dict>
 	<key>GROUP_MEMBERSHIP_MULTIPLE_COLLISIONS_BANNER_TITLE_%d</key>
@@ -668,13 +668,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>У групі виявлено %1$d конфлікт імен. Перегляньте учасників нижче або виберіть дію.</string>
+			<string>У групі виявлено %1$d конфлікт імен. Перегляньте учасників або вчиніть з ними як пропонується.</string>
 			<key>few</key>
-			<string>У групі виявлено %1$d конфлікти імен. Перегляньте учасників нижче або виберіть дію.</string>
+			<string>У групі виявлено %1$d конфлікти імен. Перегляньте учасників або вчиніть з ними як пропонується.</string>
 			<key>many</key>
-			<string>У групі виявлено %1$d конфліктів імен. Перегляньте учасників нижче або виберіть дію.</string>
+			<string>У групі виявлено %1$d конфліктів імен. Перегляньте учасників або вчиніть з ними як пропонується.</string>
 			<key>other</key>
-			<string>У групі виявлено %1$d конфлікту імен. Перегляньте учасників нижче або виберіть дію.</string>
+			<string>У групі виявлено %1$d конфлікту імен. Перегляньте учасників або вчиніть з ними як пропонується.</string>
 		</dict>
 	</dict>
 	<key>GROUP_MEMBERSHIP_NAME_SINGLE_COLLISION_HEADER_%d</key>
@@ -688,13 +688,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%1$d учасник групи має таке саме ім&apos;я. Перегляньте учасника нижче або виберіть дію.</string>
+			<string>%1$d учасник групи має таке саме ім&apos;я. Перегляньте учасника або вчиніть з ним як пропонується.</string>
 			<key>few</key>
-			<string>%1$d учасники групи мають однакові імена. Перегляньте учасників нижче або виберіть дію.</string>
+			<string>%1$d учасники групи мають однакові імена. Перегляньте учасників або вчиніть з ними як пропонується.</string>
 			<key>many</key>
-			<string>%1$d учасників групи мають однакові імена. Перегляньте учасників нижче або виберіть дію.</string>
+			<string>%1$d учасників групи мають однакові імена. Перегляньте учасників або вчиніть з ними як пропонується.</string>
 			<key>other</key>
-			<string>%1$d учасника групи мають однакові імена. Перегляньте учасників нижче або виберіть дію.</string>
+			<string>%1$d учасника групи мають однакові імена. Перегляньте учасників або вчиніть з ними як пропонується.</string>
 		</dict>
 	</dict>
 	<key>GROUP_MEMBER_COUNT_LABEL_%d</key>
@@ -868,7 +868,7 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Не вдалося додати учасника до нової групи, тому його було вилучено.</string>
+			<string>Не вдалося додати %1$d учасника до нової групи, тому його було вилучено.</string>
 			<key>few</key>
 			<string>Не вдалося додати %1$d учасників до нової групи, тому їх було вилучено.</string>
 			<key>many</key>
@@ -888,13 +888,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Не вдалося додати учасника до нової групи, тому його було запрошено приєднатись.</string>
+			<string>Не вдалося додати %1$d учасника до нової групи. Йому було надіслано запрошення.</string>
 			<key>few</key>
-			<string>Не вдалося додати %1$d учасників до нової групи, тому їх було запрошено приєднатись.</string>
+			<string>Не вдалося додати %1$d учасників до нової групи. Їм було надіслано запрошення.</string>
 			<key>many</key>
-			<string>Не вдалося додати %1$d учасників до нової групи, тому їх було запрошено приєднатись.</string>
+			<string>Не вдалося додати %1$d учасників до нової групи. Їм було надіслано запрошення.</string>
 			<key>other</key>
-			<string>Не вдалося додати %1$d учасника до нової групи, тому їх було запрошено приєднатись.</string>
+			<string>Не вдалося додати %1$d учасника до нової групи. Їм було надіслано запрошення.</string>
 		</dict>
 	</dict>
 	<key>IMAGE_PICKER_CAN_SELECT_NO_MORE_TOAST_%d</key>
