--- a/Signal/translations/de.lproj/Localizable.strings
+++ b/Signal/translations/de.lproj/Localizable.strings
@@ -2657,7 +2657,7 @@
 "FINISH_GROUP_CREATION_LABEL" = "Gruppenerstellung abschließen";
 
 /* Tooltip notifying users that the flip camera button moved to the picture-in-picture view of themselves in a call */
-"FLIP_CAMERA_BUTTON_MOVED_TO_PIP_TOOLTIP" = "Flip Camera has been moved here, tap your video to try it out";
+"FLIP_CAMERA_BUTTON_MOVED_TO_PIP_TOOLTIP" = "Die Schaltfläche »Kamera wechseln« wurde hierher verschoben. Tippe auf dein Video, um es auszuprobieren.";
 
 /* Label and title for 'contact forwarding' views. */
 "FORWARD_CONTACT" = "Kontakt weiterleiten";
