--- a/Signal/translations/ga.lproj/Localizable.strings
+++ b/Signal/translations/ga.lproj/Localizable.strings
@@ -2657,7 +2657,7 @@
 "FINISH_GROUP_CREATION_LABEL" = "Críochnaigh cruthú an ghrúpa";
 
 /* Tooltip notifying users that the flip camera button moved to the picture-in-picture view of themselves in a call */
-"FLIP_CAMERA_BUTTON_MOVED_TO_PIP_TOOLTIP" = "Flip Camera has been moved here, tap your video to try it out";
+"FLIP_CAMERA_BUTTON_MOVED_TO_PIP_TOOLTIP" = "Bogadh an Smeach-cheamara anseo, tapáil d'fhíseán lena thriail";
 
 /* Label and title for 'contact forwarding' views. */
 "FORWARD_CONTACT" = "Cuir an teagmhálaí ar aghaidh";
