--- a/Signal/translations/gu.lproj/Localizable.strings
+++ b/Signal/translations/gu.lproj/Localizable.strings
@@ -2657,7 +2657,7 @@
 "FINISH_GROUP_CREATION_LABEL" = "ગ્રુપ બનાવવાનું સમાપ્ત કરો";
 
 /* Tooltip notifying users that the flip camera button moved to the picture-in-picture view of themselves in a call */
-"FLIP_CAMERA_BUTTON_MOVED_TO_PIP_TOOLTIP" = "Flip Camera has been moved here, tap your video to try it out";
+"FLIP_CAMERA_BUTTON_MOVED_TO_PIP_TOOLTIP" = "ફ્લિપ કૅમેરા અહીં ખસેડવામાં આવ્યો છે, તેને અજમાવવા માટે તમારી વીડિયોને ટેપ કરો";
 
 /* Label and title for 'contact forwarding' views. */
 "FORWARD_CONTACT" = "સંપર્ક આગળ મોકલો";
