--- a/Signal/translations/tr.lproj/Localizable.strings
+++ b/Signal/translations/tr.lproj/Localizable.strings
@@ -2657,7 +2657,7 @@
 "FINISH_GROUP_CREATION_LABEL" = "Grup oluşturmayı tamamla";
 
 /* Tooltip notifying users that the flip camera button moved to the picture-in-picture view of themselves in a call */
-"FLIP_CAMERA_BUTTON_MOVED_TO_PIP_TOOLTIP" = "Flip Camera has been moved here, tap your video to try it out";
+"FLIP_CAMERA_BUTTON_MOVED_TO_PIP_TOOLTIP" = "Kamerayı Döndür buraya taşındı, denemek için videona dokun";
 
 /* Label and title for 'contact forwarding' views. */
 "FORWARD_CONTACT" = "Kişiyi Yönlendir";
