--- a/Signal/translations/ur.lproj/Localizable.strings
+++ b/Signal/translations/ur.lproj/Localizable.strings
@@ -2657,7 +2657,7 @@
 "FINISH_GROUP_CREATION_LABEL" = "گروپ بنانے کا اختتام";
 
 /* Tooltip notifying users that the flip camera button moved to the picture-in-picture view of themselves in a call */
-"FLIP_CAMERA_BUTTON_MOVED_TO_PIP_TOOLTIP" = "Flip Camera has been moved here, tap your video to try it out";
+"FLIP_CAMERA_BUTTON_MOVED_TO_PIP_TOOLTIP" = "فلپ کیمرہ یہاں منتقل کر دیا گیا ہے، اسے آزمانے کے لیے اپنی ویڈیو پر ٹیپ کریں";
 
 /* Label and title for 'contact forwarding' views. */
 "FORWARD_CONTACT" = "رابطہ کو آگے بھیجیں";
