--- a/Signal/translations/vi.lproj/Localizable.strings
+++ b/Signal/translations/vi.lproj/Localizable.strings
@@ -2657,7 +2657,7 @@
 "FINISH_GROUP_CREATION_LABEL" = "Hoàn tất tạo nhóm";
 
 /* Tooltip notifying users that the flip camera button moved to the picture-in-picture view of themselves in a call */
-"FLIP_CAMERA_BUTTON_MOVED_TO_PIP_TOOLTIP" = "Flip Camera has been moved here, tap your video to try it out";
+"FLIP_CAMERA_BUTTON_MOVED_TO_PIP_TOOLTIP" = "Nút Đảo Camera đã được chuyển đến đây, nhấn vào video của bạn để thử";
 
 /* Label and title for 'contact forwarding' views. */
 "FORWARD_CONTACT" = "Chuyển tiếp liên hệ";
