--- a/fastlane/metadata/el/release_notes.txt
+++ b/fastlane/metadata/el/release_notes.txt
@@ -1,1 +1,1 @@
-• Improved picture-in-picture camera controls and animations during video calls. Tap on your outgoing video to quickly flip between showing them the look on your face or letting them look at what you're facing.
+• Βελτιωμένοι έλεγχοι και γραφικά της κάμερας picture-in-picture κατά τη διάρκεια βιντεοκλήσεων. Πάτησε στο εξερχόμενο βίντεο για να αλλάξεις γρήγορα μεταξύ της προβολής του προσώπου σου ή αυτού που βλέπεις.
