--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,1 +1,1 @@
-• Improved picture-in-picture camera controls and animations during video calls. Tap on your outgoing video to quickly flip between showing them the look on your face or letting them look at what you're facing.
+• De camerabediening voor picture-in-picture en animaties tijdens video-oproepen zijn verbeterd. Tik op je uitgaande video om snel te wisselen tussen je gezicht en je uitzicht.
