--- a/fastlane/metadata/pl/release_notes.txt
+++ b/fastlane/metadata/pl/release_notes.txt
@@ -1,1 +1,1 @@
-• Improved picture-in-picture camera controls and animations during video calls. Tap on your outgoing video to quickly flip between showing them the look on your face or letting them look at what you're facing.
+• Ulepszone animacje i sterowanie „obrazem w obrazie” podczas rozmów wideo. Stuknij wideo wychodzące, aby szybko przełączać się między obrazem Twojej twarzy a obrazem tego, na co akurat patrzysz.
