--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• Improved picture-in-picture camera controls and animations during video calls. Tap on your outgoing video to quickly flip between showing them the look on your face or letting them look at what you're facing.
+• Улучшено управление камерой в режиме «картинка в картинке» и анимация во время видеозвонков. Нажмите на текущее видео, чтобы быстро переключиться между отображением вашего лица и возможностью встретиться лицом к лицу с другими вызовами.
