--- a/fastlane/metadata/th/release_notes.txt
+++ b/fastlane/metadata/th/release_notes.txt
@@ -1,1 +1,1 @@
-• Improved picture-in-picture camera controls and animations during video calls. Tap on your outgoing video to quickly flip between showing them the look on your face or letting them look at what you're facing.
+• อัปเกรดตัวควบคุมกล้องในโหมดจอเล็ก (Picture-in-Picture) รวมทั้งภาพเคลื่อนไหวในระหว่างที่ใช้วิดีโอคอล
