--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,1 +1,1 @@
-• Improved picture-in-picture camera controls and animations during video calls. Tap on your outgoing video to quickly flip between showing them the look on your face or letting them look at what you're facing.
+• Ми покращили анімації та керування камерою під час відеовикликів для режиму «картинка в картинці». Просто торкніться вихідного відео для швидкого перемикання камери: щойно співрозмовники дивилися вам у вічі, а от вони вже дивляться на світ вашими очима.
