--- a/fastlane/metadata/zh-Hant/release_notes.txt
+++ b/fastlane/metadata/zh-Hant/release_notes.txt
@@ -1,1 +1,1 @@
-• Improved picture-in-picture camera controls and animations during video calls. Tap on your outgoing video to quickly flip between showing them the look on your face or letting them look at what you're facing.
+• 改進了視訊通話期間的子母畫面相機控制和動畫效果。點按傳出的視訊即可快速切換鏡頭，可以向對方展示你的表情，或讓他們看到你面前的景物。
