--- a/Signal/translations/uk.lproj/Localizable.strings
+++ b/Signal/translations/uk.lproj/Localizable.strings
@@ -1109,7 +1109,7 @@
 "CONTACT_ABOUT_SHEET_CONNECTION_IN_SYSTEM_CONTACTS" = "%1$@ є в контактах вашого пристрою";
 
 /* Indicates that the user has no messages with the other account. Embeds {{name}} */
-"CONTACT_ABOUT_SHEET_NO_DIRECT_MESSAGES" = "Ти й %1$@ не маєте повідомлень";
+"CONTACT_ABOUT_SHEET_NO_DIRECT_MESSAGES" = "Особистого чату з %1$@ немає";
 
 /* Indicates that the user has a pending request with the other account. Embeds {{name}} */
 "CONTACT_ABOUT_SHEET_PENDING_REQUEST" = "Активний запит на повідомлення";
@@ -1217,19 +1217,19 @@
 "CONTACT_SUPPORT_FILTER_FEATURE_REQUEST" = "Бажаю запитати про нову функцію";
 
 /* A brief localized representation of the 'feature request' support filter. */
-"CONTACT_SUPPORT_FILTER_FEATURE_REQUEST_SHORT" = "Запит нових функцій";
+"CONTACT_SUPPORT_FILTER_FEATURE_REQUEST_SHORT" = "Бракує функції";
 
 /* The localized representation of the 'feedback' support filter. */
-"CONTACT_SUPPORT_FILTER_FEEDBACK" = "Маю відгук про програму";
+"CONTACT_SUPPORT_FILTER_FEEDBACK" = "Маю відгук про застосунок";
 
 /* A brief localized representation of the 'feedback' support filter. */
-"CONTACT_SUPPORT_FILTER_FEEDBACK_SHORT" = "Відгук про програму";
+"CONTACT_SUPPORT_FILTER_FEEDBACK_SHORT" = "Відгук про застосунок";
 
 /* The localized representation of the 'other' support filter. */
 "CONTACT_SUPPORT_FILTER_OTHER" = "Щось інше";
 
 /* A brief localized representation of the 'other' support filter. */
-"CONTACT_SUPPORT_FILTER_OTHER_SHORT" = "Інше";
+"CONTACT_SUPPORT_FILTER_OTHER_SHORT" = "Інша причина";
 
 /* The localized representation of the 'payments' support filter. */
 "CONTACT_SUPPORT_FILTER_PAYMENTS" = "Платежі";
@@ -1526,7 +1526,7 @@
 "CONVERSATION_SETTINGS_SEARCH_BUTTON" = "пошук";
 
 /* Label for button that sets 'send messages permission' for a group to 'all members'. */
-"CONVERSATION_SETTINGS_SEND_MESSAGES_SECTION_ALL_MEMBERS" = "Всі учасники";
+"CONVERSATION_SETTINGS_SEND_MESSAGES_SECTION_ALL_MEMBERS" = "Усі учасники";
 
 /* Footer for the 'send messages' section in conversation settings permissions view. */
 "CONVERSATION_SETTINGS_SEND_MESSAGES_SECTION_FOOTER" = "Оберіть, хто може відправити повідомлення та почати дзвінок у цій групі.";
@@ -2552,10 +2552,10 @@
 "ERROR_MESSAGE_NO_SESSION" = "Немає доступного сеансу для контакту.";
 
 /* Shown when signal users safety numbers changed */
-"ERROR_MESSAGE_NON_BLOCKING_IDENTITY_CHANGE" = "Код безпеки змінено.";
+"ERROR_MESSAGE_NON_BLOCKING_IDENTITY_CHANGE" = "Код безпеки змінився.";
 
 /* Shown when signal users safety numbers changed, embeds the user's {{name or phone number}} */
-"ERROR_MESSAGE_NON_BLOCKING_IDENTITY_CHANGE_FORMAT" = "Ваш код безпеки із %1$@ змінився.";
+"ERROR_MESSAGE_NON_BLOCKING_IDENTITY_CHANGE_FORMAT" = "Код безпеки для чату з %1$@ змінився.";
 
 /* Text notifying the user that their secure session has been reset */
 "ERROR_MESSAGE_SESSION_REFRESH" = "Сесію чату оновлено";
@@ -2564,7 +2564,7 @@
 "ERROR_MESSAGE_UNKNOWN_ERROR" = "Виникла невідома помилка.";
 
 /* No comment provided by engineer. */
-"ERROR_MESSAGE_WRONG_TRUSTED_IDENTITY_KEY" = "Код безпеки змінено.";
+"ERROR_MESSAGE_WRONG_TRUSTED_IDENTITY_KEY" = "Код безпеки змінився.";
 
 /* Error indicating network connectivity problems. */
 "ERROR_NETWORK_FAILURE" = "Помилка мережі";
@@ -2612,7 +2612,7 @@
 "FAILED_SENDING_BECAUSE_RATE_LIMIT" = "Забагато помилок із цим контактом. Спробуйте пізніше.";
 
 /* action sheet header when re-sending message which failed because of untrusted identity keys */
-"FAILED_SENDING_BECAUSE_UNTRUSTED_IDENTITY_KEY" = "Ваш код безпеки із %1$@ недавно змінився. Можливо, його необхідно завірити перед тим, як надіслати це повідомлення знову.";
+"FAILED_SENDING_BECAUSE_UNTRUSTED_IDENTITY_KEY" = "Ваш код безпеки для чату з %1$@ недавно змінився. Можливо, варто його перевірити, перш ніж надсилати це повідомлення знову.";
 
 /* Shown as the body of an alert when failing to redeem a badge that was received after a friend donated on your behalf. */
 "FAILED_TO_REDEEM_BADGE_RECEIVED_AFTER_DONATION_FROM_A_FRIEND_BODY" = "Не вдалось активувати значок. Перевірте підключення до мережі і спробуйте знову.";
@@ -2621,7 +2621,7 @@
 "FAILED_TO_REDEEM_BADGE_RECEIVED_AFTER_DONATION_FROM_A_FRIEND_TITLE" = "Не вдалось активувати значок";
 
 /* alert title */
-"FAILED_VERIFICATION_TITLE" = "Не вдалося підтвердити код безпеки!";
+"FAILED_VERIFICATION_TITLE" = "Не вдалося перевірити код безпеки!";
 
 /* Section header directing user to select a badge */
 "FEATURED_BADGE_SECTION_HEADER" = "Обрати відзнаку";
@@ -2657,7 +2657,7 @@
 "FINISH_GROUP_CREATION_LABEL" = "Завершити створення групи";
 
 /* Tooltip notifying users that the flip camera button moved to the picture-in-picture view of themselves in a call */
-"FLIP_CAMERA_BUTTON_MOVED_TO_PIP_TOOLTIP" = "Flip Camera has been moved here, tap your video to try it out";
+"FLIP_CAMERA_BUTTON_MOVED_TO_PIP_TOOLTIP" = "Тепер кнопка перемикання камери знаходиться тут. Торкніться свого відео, щоб спробувати";
 
 /* Label and title for 'contact forwarding' views. */
 "FORWARD_CONTACT" = "Переслати контакт";
@@ -2753,7 +2753,7 @@
 "GROUP_ACCESS_LEVEL_ANY" = "Будь-який користувач";
 
 /* Description of the 'all members' access level. */
-"GROUP_ACCESS_LEVEL_MEMBER" = "Всі учасники";
+"GROUP_ACCESS_LEVEL_MEMBER" = "Усі учасники";
 
 /* Description of the 'unknown' access level. */
 "GROUP_ACCESS_LEVEL_UNKNOWN" = "Невідомо";
@@ -3869,7 +3869,7 @@
 "MEDIA_EDITOR_TEXT_FIELD_VIEW_ONCE_MEDIA" = "Переглянути одноразові медіафайли";
 
 /* Button to reset media filter. Displayed when filter results in no media visible. */
-"MEDIA_GALLERY_CLEAR_FILTER_BUTTON" = "Очистити фільтр";
+"MEDIA_GALLERY_CLEAR_FILTER_BUTTON" = "Скасувати фільтр";
 
 /* Explanatory text displayed when deleting N items in All Media screen. */
 "MEDIA_GALLERY_DELETE_MEDIA_BODY" = "Ця дія назавжди видалить вибрані файли. Текст повідомлень, пов'язаний із цими файлами, також буде видалено.";
@@ -4079,7 +4079,7 @@
 "MESSAGE_REQUEST_BLOCK_AND_REPORT_SPAM_ACTION" = "Повідомити про спам і заблокувати";
 
 /* Action sheet message to confirm blocking a conversation via a message request. */
-"MESSAGE_REQUEST_BLOCK_CONVERSATION_MESSAGE" = "Заблоковані люди не зможуть вам дзвонити чи надсилати повідомлення.";
+"MESSAGE_REQUEST_BLOCK_CONVERSATION_MESSAGE" = "Заблоковані користувачі не зможуть вам дзвонити й надсилати повідомлення.";
 
 /* Action sheet title to confirm blocking a contact via a message request. Embeds {{contact name or phone number}} */
 "MESSAGE_REQUEST_BLOCK_CONVERSATION_TITLE_FORMAT" = "Заблокувати %1$@?";
@@ -4455,6 +4455,24 @@
 
 /* Title for the new story sheet */
 "NEW_STORY_SHEET_TITLE" = "Оберіть тип сторі";
+
+/* Title for the table cell in conversation settings for presenting the profile nickname editor. */
+"NICKNAME_BUTTON_TITLE" = "Nickname";
+
+/* The description below the title on the profile nickname editor view. */
+"NICKNAME_EDITOR_DESCRIPTION" = "Nicknames and notes are stored using Signal’s end-to-end encrypted storage service. They are only visible to you.";
+
+/* Placeholder text it the text field for the family name in the profile nickname editor. */
+"NICKNAME_EDITOR_FAMILY_NAME_PLACEHOLDER" = "Last name";
+
+/* Placeholder text it the text field for the given name in the profile nickname editor. */
+"NICKNAME_EDITOR_GIVEN_NAME_PLACEHOLDER" = "First name";
+
+/* Placeholder text it the text box for the note in the profile nickname editor. */
+"NICKNAME_EDITOR_NOTE_PLACEHOLDER" = "Note";
+
+/* The title for the profile nickname editor view. */
+"NICKNAME_EDITOR_TITLE" = "Nickname";
 
 /* Label for a button that lets users search for contacts by phone number */
 "NO_CONTACTS_SEARCH_BY_PHONE_NUMBER" = "Знайти контакти за номером телефону";
@@ -5306,7 +5324,7 @@
 "PIN_REMINDER_MEGAPHONE_TOMORROW_TOAST" = "Ми нагадаємо знову завтра.";
 
 /* Toast indicating that we'll ask you for your PIN again in 2 weeks. */
-"PIN_REMINDER_MEGAPHONE_TWO_WEEK_TOAST" = "Ми нагадаємо вам знов за пару тижнів.";
+"PIN_REMINDER_MEGAPHONE_TWO_WEEK_TOAST" = "Ми нагадаємо знов через кілька тижнів.";
 
 /* Toast indicating that we'll ask you for your PIN again in a week. */
 "PIN_REMINDER_MEGAPHONE_WEEK_TOAST" = "Ми нагадаємо знову через тижнь.";
@@ -5372,7 +5390,7 @@
 "PRIVACY_VERIFICATION_FAILURE_INVALID_QRCODE" = "Відсканований код не схожий на код безпеки. Ви обидва користуєтеся останньою версією Signal?";
 
 /* Navbar title */
-"PRIVACY_VERIFICATION_TITLE" = "Підтвердити код безпеки";
+"PRIVACY_VERIFICATION_TITLE" = "Перевірка коду безпеки";
 
 /* Button that lets user mark another user's identity as verified. */
 "PRIVACY_VERIFY_BUTTON" = "Позначити як перевірений";
@@ -6776,7 +6794,7 @@
 "SETTINGS_PAYMENTS_RESTORE_WALLET_SPLASH_EXPLANATION" = "Ваша кодова фраза — це 24 слова, що є унікальними для вас. Використовується для відновлення платіжного облікового запису.";
 
 /* Title for the first step of the 'restore payments wallet' views. */
-"SETTINGS_PAYMENTS_RESTORE_WALLET_SPLASH_TITLE" = "Ввести кодову фразу";
+"SETTINGS_PAYMENTS_RESTORE_WALLET_SPLASH_TITLE" = "Введіть кодову фразу";
 
 /* Title for the 'restore payments wallet' view of the app settings. */
 "SETTINGS_PAYMENTS_RESTORE_WALLET_TITLE" = "Кодова фраза";
@@ -6791,7 +6809,7 @@
 "SETTINGS_PAYMENTS_RESTORE_WALLET_WORD_INVALID_WORD" = "Слово введене неправильно.";
 
 /* Title for the 'enter word' step of the 'restore payments wallet' views. */
-"SETTINGS_PAYMENTS_RESTORE_WALLET_WORD_TITLE" = "Ввести кодову фразу";
+"SETTINGS_PAYMENTS_RESTORE_WALLET_WORD_TITLE" = "Введіть кодову фразу";
 
 /* Title for the first step of the 'save payments passphrase' views. */
 "SETTINGS_PAYMENTS_SAVE_PASSPHRASE_START_TITLE" = "Зберегти кодову фразу";
@@ -7502,7 +7520,7 @@
 "SUPPORT_CONTACT_US_HEADER" = "Зв’язатися з нами";
 
 /* Placeholder string for support description */
-"SUPPORT_DESCRIPTION_PLACEHOLDER" = "Поділиться своїми думками";
+"SUPPORT_DESCRIPTION_PLACEHOLDER" = "Поясніть, що сталося";
 
 /* Default prompt for user description in support email requests */
 "SUPPORT_EMAIL_DEFAULT_DESCRIPTION" = "Опишіть проблему, що виникла: ";
@@ -7541,7 +7559,7 @@
 "SUPPORT_EMOJI_PROMPT" = "Який у вас настрій? (За бажанням)";
 
 /* Label in support request informing user about Signal FAQ */
-"SUPPORT_FAQ_PROMPT" = "Розведіть чи зведіть два пальці для зміни масштабу, потягніть для зміни положення.";
+"SUPPORT_FAQ_PROMPT" = "Відповіді на поширені запитання.";
 
 /* Label describing support switch to attach debug logs */
 "SUPPORT_INCLUDE_DEBUG_LOG" = "Долучити журнал налагодження";
@@ -7862,7 +7880,7 @@
 "USERNAME_EDUCATION_TITLE" = "Нові способи додавання контактів";
 
 /* Description of usernames on the username education sheet */
-"USERNAME_EDUCATION_USERNAME_DESCRIPTION" = "Тепер люди можуть писати вам, знаючи ваше ім'я користувача. Його можна створити в разі потреби не повідомляти свого номера телефону. Ім'я користувача не відображається у вашому профілі.";
+"USERNAME_EDUCATION_USERNAME_DESCRIPTION" = "Тепер люди можуть писати вам, знаючи ваше ім'я користувача. Його можна створити в разі потреби не повідомляти свого номера телефону. Ім'я користувача не показується у вашому профілі.";
 
 /* Title for usernames section on the username education sheet */
 "USERNAME_EDUCATION_USERNAME_TITLE" = "Імена користувачів";
@@ -8009,10 +8027,10 @@
 "VERIFICATION_STATE_CHANGE_GENERIC" = "Стан підтвердження змінено.";
 
 /* Label for button or row which allows users to verify the safety number of another user. */
-"VERIFY_PRIVACY" = "Подивитись код безпеки";
+"VERIFY_PRIVACY" = "Переглянути код безпеки";
 
 /* Label for button or row which allows users to verify the safety numbers of multiple users. */
-"VERIFY_PRIVACY_MULTIPLE" = "Переглянути код безпеки";
+"VERIFY_PRIVACY_MULTIPLE" = "Переглянути коди безпеки";
 
 /* Instructions for verifying your safety number. Embeds {{contact's name}} */
 "VERIFY_SAFETY_NUMBER_INSTRUCTIONS" = "Щоб перевірити наявність наскрізного шифрування з користувачем %1$@, порівняйте наведені вище цифри із цифрами на пристрої вашого співрозмовника. Користувач також може відсканувати ваш код за допомогою свого пристрою.";
