--- a/fastlane/metadata/hu/release_notes.txt
+++ b/fastlane/metadata/hu/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you open a chat with a missed call, that missed call indicator will also be cleared from the calls tab. If you’ve never seen this bug, you aren’t missing much.
+• Mostantól, amikor megnyitsz egy csevegést egy nem fogadott hívással, a nem fogadott hívás kijelzése is törlődik a Hívások lapról.
