--- a/fastlane/metadata/ms/release_notes.txt
+++ b/fastlane/metadata/ms/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you open a chat with a missed call, that missed call indicator will also be cleared from the calls tab. If you’ve never seen this bug, you aren’t missing much.
+• Kini apabila anda buka sembang dengan panggilan terlepas, penunjuk panggilan terlepas itu juga akan dikosongkan daripada tab panggilan.
