--- a/fastlane/metadata/no/release_notes.txt
+++ b/fastlane/metadata/no/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you open a chat with a missed call, that missed call indicator will also be cleared from the calls tab. If you’ve never seen this bug, you aren’t missing much.
+• Dersom du har et tapt anrop i en samtale, vil varselet om det tapte anropet fjernes fra anropsoversikten når du åpner samtalen.
