--- a/fastlane/metadata/pt-BR/release_notes.txt
+++ b/fastlane/metadata/pt-BR/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you open a chat with a missed call, that missed call indicator will also be cleared from the calls tab. If you’ve never seen this bug, you aren’t missing much.
+• Agora, quando você abre um chat com uma chamada perdida, o indicador dessa chamada perdida também desaparecerá da aba de chamadas. Se você nunca viu esse bug, não está perdendo muito.
