--- a/fastlane/metadata/ro/release_notes.txt
+++ b/fastlane/metadata/ro/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you open a chat with a missed call, that missed call indicator will also be cleared from the calls tab. If you’ve never seen this bug, you aren’t missing much.
+• Acum, atunci când deschizi o conversație cu un apel pierdut, indicatorul de apel pierdut va fi, de asemenea, eliminat din fila Apeluri. Dacă nu ai văzut niciodată această eroare, nu ai pierdut mare lucru.
