--- a/fastlane/metadata/ar-SA/release_notes.txt
+++ b/fastlane/metadata/ar-SA/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you open a chat with a missed call, that missed call indicator will also be cleared from the calls tab. If you’ve never seen this bug, you aren’t missing much.
+• عندما تفتح دردشة بمكالمة فائتة، سَيتم مسح مؤشر هذه المكالمة من علامة تبويب المكالمات أيضًا.
