--- a/fastlane/metadata/el/release_notes.txt
+++ b/fastlane/metadata/el/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you open a chat with a missed call, that missed call indicator will also be cleared from the calls tab. If you’ve never seen this bug, you aren’t missing much.
+• Πλέον όταν ανοίγεις μια συνομιλία με μια αναπάντητη κλήση, η ένδειξη αναπάντητης κλήσης θα διαγραφεί επίσης από την καρτέλα κλήσεων. Αν δεν έχεις δει ποτέ αυτό το σφάλμα, δεν χάνεις και πολλά.
