--- a/fastlane/metadata/fi/release_notes.txt
+++ b/fastlane/metadata/fi/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you open a chat with a missed call, that missed call indicator will also be cleared from the calls tab. If you’ve never seen this bug, you aren’t missing much.
+• Kun jatkossa avaat keskustelun, jossa on vastaamatta jäänyt puhelu, vastaamattoman puhelun ilmaisin poistetaan myös puhelut-välilehdeltä.
