--- a/fastlane/metadata/hr/release_notes.txt
+++ b/fastlane/metadata/hr/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you open a chat with a missed call, that missed call indicator will also be cleared from the calls tab. If you’ve never seen this bug, you aren’t missing much.
+• Sada, kada otvorite razgovor s propuštenim pozivom, obavijest o propuštenom pozivu automatski će se izbrisati s kartice poziva.
