--- a/fastlane/metadata/id/release_notes.txt
+++ b/fastlane/metadata/id/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you open a chat with a missed call, that missed call indicator will also be cleared from the calls tab. If you’ve never seen this bug, you aren’t missing much.
+• Kini jika Anda membuka obrolan yang punya panggilan tak terjawab, indikator panggilan tak terjawab tersebut juga akan dihapus dari tab panggilan.
