--- a/fastlane/metadata/pl/release_notes.txt
+++ b/fastlane/metadata/pl/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you open a chat with a missed call, that missed call indicator will also be cleared from the calls tab. If you’ve never seen this bug, you aren’t missing much.
+• Od teraz, gdy otworzysz czat z nieodebranym połączeniem, wskaźnik tego połączenia zniknie z karty połączeń. Jeśli pierwszy raz słyszysz o tym błędzie, nic Cię nie ominęło.
