--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you open a chat with a missed call, that missed call indicator will also be cleared from the calls tab. If you’ve never seen this bug, you aren’t missing much.
+• Теперь, после того как вы открыли чат с пропущенным звонком, этот индикатор пропущенного звонка будет также удалён с вкладки звонков. Никогда не сталкивались с этой ошибкой? Значит, вы ничего не пропустили.
