--- a/fastlane/metadata/sk/release_notes.txt
+++ b/fastlane/metadata/sk/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you open a chat with a missed call, that missed call indicator will also be cleared from the calls tab. If you’ve never seen this bug, you aren’t missing much.
+• Keď teraz otvoríte čet so zmeškaným hovorom, tento indikátor zmeškaného hovoru sa tiež vymaže z karty hovorov.
