--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you open a chat with a missed call, that missed call indicator will also be cleared from the calls tab. If you’ve never seen this bug, you aren’t missing much.
+• Artık cevapsız arama içeren bir sohbet açtığında, cevapsız arama göstergesi de aramalar sekmesinden silinecektir. Bu hatayı hiç görmediysen fazla bir şey kaçırmıyorsun demektir.
