--- a/fastlane/metadata/vi/release_notes.txt
+++ b/fastlane/metadata/vi/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you open a chat with a missed call, that missed call indicator will also be cleared from the calls tab. If you’ve never seen this bug, you aren’t missing much.
+• Giờ đây khi bạn mở cuộc trò chuyện với một cuộc gọi nhỡ, thông báo cuộc gọi nhỡ đó sẽ mất đi trong tab cuộc gọi.
